Ajout des actions Edit/Delete/Add

--- a/templates/adversaire/partials/actions.hbs
+++ b/templates/adversaire/partials/actions.hbs
@@ -1,7 +1,11 @@
 {{!log "AdversaireSheet - Partials - Actions" this }}
 <div class="adversaire-actions">
     <div class="actions-adverses">
-        <h2>Actions adverses</h2>
+        <h2>Actions adverses
+            {{#if unlocked}}
+                <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.create' item='une action adverse' }}" data-action="create" data-type="action" data-subtype="adverse"><i class="fas fa-plus"></i></a>
+            {{/if}}
+        </h2>
         <div class="actions">
             {{#each actionsAdverses as |item id|}}
                 <div class="action item draggable" data-item-id="{{item._id}}">
@@ -23,7 +27,11 @@
     </div>
     {{#if hasActionsDissonance}}
         <div class="actions-dissonance">
-            <h2>Actions de dissonance</h2>
+            <h2>Actions de dissonance
+            {{#if unlocked}}
+                <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.create' item='une action de dissonance' }}" data-action="create" data-type="action" data-subtype="dissonance"><i class="fas fa-plus"></i></a>
+            {{/if}}
+            </h2>
             <div class="actions">
                 {{#each actionsDissonance as |item id|}}
                     <div class="action item draggable" data-item-id="{{item._id}}">
