--- a/penombre.css
+++ b/penombre.css
@@ -1450,12 +1450,16 @@ body.theme-dark .penombre.eminence .eminence-content .eminence-timbre-2 .frise-p
 }
 .penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos input {
   margin: 0 5px;
+  text-align: center;
 }
 .penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .nom {
   display: flex;
   flex-direction: column;
   gap: 10px;
   margin-bottom: 10px;
+}
+.penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .nom input {
+  text-align: left;
 }
 .penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .nom.locked {
   flex-direction: row;
@@ -1502,6 +1506,7 @@ body.theme-dark .penombre.eminence .eminence-content .eminence-timbre-2 .frise-p
 .penombre.adversaire .adversaire-content .adversaire-main .adversaire-actions .actions-dissonance h2 {
   font-size: 1.2rem;
   text-align: center;
+  margin: 0;
 }
 .penombre.adversaire .adversaire-content .adversaire-main .adversaire-actions .actions {
   display: grid;
@@ -1509,6 +1514,7 @@ body.theme-dark .penombre.eminence .eminence-content .eminence-timbre-2 .frise-p
   gap: 10px;
 }
 .penombre.adversaire .adversaire-content .adversaire-main .adversaire-actions .actions .action {
+  position: relative;
   border: 1px solid #ccc;
   border-radius: 5px;
   padding: 10px;
@@ -1517,6 +1523,7 @@ body.theme-dark .penombre.eminence .eminence-content .eminence-timbre-2 .frise-p
   font-weight: bold;
   font-style: italic;
   text-align: center;
+  margin-right: 40px;
 }
 .penombre.adversaire .adversaire-content .adversaire-main .adversaire-actions .actions .action .item-controls {
   position: absolute;
@@ -1531,6 +1538,7 @@ body.theme-dark .penombre.eminence .eminence-content .eminence-timbre-2 .frise-p
 .penombre.adversaire .adversaire-content .adversaire-main .adversaire-intrigues h2 {
   font-size: 1.2rem;
   text-align: center;
+  margin: 0;
 }
 .penombre.adversaire .adversaire-content .adversaire-main .adversaire-intrigues .intrigues {
   display: grid;
@@ -1538,6 +1546,7 @@ body.theme-dark .penombre.eminence .eminence-content .eminence-timbre-2 .frise-p
   gap: 10px;
 }
 .penombre.adversaire .adversaire-content .adversaire-main .adversaire-intrigues .intrigues .intrigue {
+  position: relative;
   border: 1px solid #ccc;
   border-radius: 5px;
   padding: 10px;
@@ -1546,6 +1555,7 @@ body.theme-dark .penombre.eminence .eminence-content .eminence-timbre-2 .frise-p
   font-weight: bold;
   font-style: italic;
   text-align: center;
+  margin-right: 40px;
 }
 .penombre.adversaire .adversaire-content .adversaire-main .adversaire-intrigues .intrigues .intrigue .item-controls {
   position: absolute;
