--- a/styles/adversaire.less
+++ b/styles/adversaire.less
@@ -19,12 +19,16 @@
           gap: 10px;
           input {
             margin: 0 5px;
+            text-align: center;
           }
           .nom {
             display: flex;
             flex-direction: column;
             gap: 10px;
             margin-bottom: 10px;
+            input {
+              text-align: left;
+            }
             &.locked {
               flex-direction: row;
               justify-content: center;
@@ -71,6 +75,7 @@
           h2 {
             font-size: 1.2rem;
             text-align: center;
+            margin: 0;
           }
         }
         .actions {
@@ -78,6 +83,7 @@
           grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
           gap: 10px;
           .action {
+            position: relative;
             border: 1px solid #ccc;
             border-radius: 5px;
             padding: 10px;
@@ -85,13 +91,14 @@
               font-weight: bold;
               font-style: italic;
               text-align: center;
+              margin-right: 40px;
             }
             .description {
             }
             .item-controls {
-              position: absolute;
-              top: 0.5rem;
-              right: 0.5rem;
+                position: absolute;
+                top: 0.5rem;
+                right: 0.5rem;
             }
           }
         }
@@ -104,12 +111,14 @@
         h2 {
           font-size: 1.2rem;
           text-align: center;
+          margin: 0;
         }
         .intrigues {
           display: grid;
           grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
           gap: 10px;
           .intrigue {
+            position: relative;
             border: 1px solid #ccc;
             border-radius: 5px;
             padding: 10px;
@@ -117,6 +126,7 @@
               font-weight: bold;
               font-style: italic;
               text-align: center;
+              margin-right: 40px;
             }
             .description {
             }
